# sidlakkoju.github.io

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml
gravity_simulation/: .gitignore  Cargo.toml
gravity_simulation/.cargo/: config.toml
gravity_simulation/src/: main.rs
site/: astro.config.mjs
site/public/sim/: gravity_simulation.wasm
site/src/pages/: index.astro
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: Footer.tsx  Header.tsx  ProjectCard.tsx
